@@ -1,5 +1,9 @@
 2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: added some progressfeedback 
+
+2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/xfs.cc: fixed potential crasher in read algorithm (#347914)
 
 2006-07-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
